--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-avif": "^1.1.1",
-    "gulp-imagemin": "^8.0.0",
     "gulp-webp": "^4.0.1",
     "sass": "^1.52.3"
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%"
+  ],
+  "dependencies": {
+    "gulp-imagemin": "^7.0.0"
   }
 }
